<resources>
    <string name="app_name">ShotGurnQuiz</string>
    <string name="app_title">Shot, Gurn, Quiz !</string>
    <string name="play_offline">Play Offline</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="no_account">Don\'t have an account yet ?</string>
    <string name="empty_field">Please fill out this field</string>
    <string name="incorrect_username">Incorrect username</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="fields_not_match">Fields do not match</string>
    <string name="username_already_exist">This username is already taken</string>
    <string name="email_already_exist">A user with this email already exists</string>
    <string name="email_not_valid">Please use a valid email address</string>
    <string name="leader_board">Leaderboard</string>
    <string name="profile">Profile</string>
    <string name="search_here">Search here</string>
    <string name="popular">Popular</string>
    <string name="most_recents">Latest</string>
    <string name="easy">Easy</string>
    <string name="medium">Intermediate</string>
    <string name="hard">Difficult</string>
    <string name="account_successfully_created">Your account has been successfully created</string>
    <string name="questions" translatable="false">Questions:</string>
    <string name="title" translatable="false">Title:</string>
    <string name="my_quiz" translatable="false">My quiz</string>
    <string name="difficulty" translatable="false">Difficulty:</string>
    <string name="theme" translatable="false">Theme:</string>
    <string name="new_quiz" translatable="false">New Quiz</string>
    <string name="question" translatable="false">Question</string>
    <string name="answer_a_title" translatable="false">Answer A:</string>
    <string name="answer_b_title" translatable="false">Answer B:</string>
    <string name="answer_a" translatable="false">Answer A</string>
    <string name="answer_b" translatable="false">Answer B</string>
    <string name="this_is_my_question" translatable="false">This is my question.</string>
    <string name="save" translatable="false">Save</string>
    <string name="number_of_questions" translatable="false">Number of questions:</string>
    <string name="play" translatable="false">Play it !</string>
    <string name="are_you_sure_you_want_to_quit" translatable="false">Are you sure you want to quit ?</string>
    <string name="progress_will_be_lost" translatable="false">Progress will be lost.</string>
    <string name="closing_Quiz" translatable="false">Closing Quiz</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="create" translatable="false">Create</string>
    <string name="time_left" translatable="false">Time left : </string>
    <string name="seconds" translatable="false">seconds</string>
    <string name="score" translatable="false">Score: </string>
    <string name="points_added_season_points" translatable="false"> points have been added to your season points</string>
    <string name="thanks_for_playing" translatable="false">Thanks for playing</string>
    <string name="your_score_is" translatable="false">Your score is: </string>
    <string name="return_to_quiz_list" translatable="false">Return to quiz list</string>
    <string name="points" translatable="false">Points:</string>
    <string name="season" translatable="false">Season</string>
    <string name="your_rank" translatable="false">Your rank:</string>
    <string name="change_password" translatable="false">Change password</string>
    <string name="username_indicator" translatable="false">Username:</string>
    <string name="email_indicator" translatable="false">Email:</string>
    <string name="old_password" translatable="false">Old password</string>
    <string name="new_password" translatable="false">New password</string>
    <string name="confirm_new_password" translatable="false">Confirm new password</string>
    <string name="set_password" translatable="false">Set password</string>
    <string name="password_successfully_updated" translatable="false">Your password has been successfully updated</string>
    <string-array name="difficulty_list" translatable="false">
        <item>Easy</item>
        <item>Intermediate</item>
        <item>Difficult</item>
    </string-array>
    <string-array name="theme_list" translatable="false">
        <item>Food</item>
        <item>Sport</item>
        <item>Animals</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>