<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/change_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:text="@string/change_password"
        android:theme="@style/VeryLargeTextOnLight"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/change_password_old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:width="230dp"
        android:hint="@string/old_password"
        android:drawableLeft="@drawable/lock"
        android:theme="@style/InputField"
        app:backgroundTint="@color/colorGrayTextOnLight"
        android:inputType="textPassword"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/change_password_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:width="230dp"
        android:hint="@string/new_password"
        android:drawableLeft="@drawable/lock"
        android:theme="@style/InputField"
        app:backgroundTint="@color/colorGrayTextOnLight"
        android:inputType="textPassword"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/change_password_confirm_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:width="230dp"
        android:hint="@string/confirm_new_password"
        android:drawableLeft="@drawable/lock"
        android:theme="@style/InputField"
        app:backgroundTint="@color/colorGrayTextOnLight"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/change_password_btn_confirm"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text= "@string/set_password"
        android:theme="@style/DarkButton"
        android:background="@color/colorButtonBackgroundDark"
        android:layout_marginBottom="20dp"
        />

</LinearLayout>