<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="600dp"
        android:background="@color/colorSecondBackground"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up"
            android:layout_marginTop="35dp"
            android:textSize="56sp"
            android:fontFamily="@font/font_kabouter"
            android:textColor="@color/colorTextOnLight" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_sign_up_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="40dp"
            android:hint="@string/username"
            android:drawableLeft="@drawable/user"
            android:theme="@style/InputField"
            app:backgroundTint="@color/colorGrayTextOnLight"
            android:inputType="text"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:drawableLeft="@drawable/email"
            android:theme="@style/InputField"
            app:backgroundTint="@color/colorGrayTextOnLight"
            android:inputType="textEmailAddress"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_sign_up_confirm_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_email"
            android:drawableLeft="@drawable/email"
            android:theme="@style/InputField"
            app:backgroundTint="@color/colorGrayTextOnLight"
            android:inputType="textEmailAddress"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:drawableLeft="@drawable/lock"
            android:inputType="textPassword"
            android:theme="@style/InputField"
            app:backgroundTint="@color/colorGrayTextOnLight"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_sign_up_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password"
            android:drawableLeft="@drawable/lock"
            android:inputType="textPassword"
            android:theme="@style/InputField"
            app:backgroundTint="@color/colorGrayTextOnLight"
            />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text= "@string/create_account"
            android:theme="@style/DarkButton"
            android:background="@color/colorButtonBackgroundDark"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            />

    </LinearLayout>

</RelativeLayout>