<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp"
        android:background="@color/colorSecondBackground"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in"
            android:layout_marginTop="80dp"
            android:textSize="56sp"
            android:fontFamily="@font/font_kabouter"
            android:textColor="@color/colorTextOnLight" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_sign_in_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="50dp"
            android:hint="@string/username"
            android:theme="@style/InputField"
            app:backgroundTint="@color/colorGrayTextOnLight"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="25dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:theme="@style/InputField"
            app:backgroundTint="@color/colorGrayTextOnLight"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/no_account"
            android:layout_marginTop="70dp"
            android:textSize="25sp"
            android:fontFamily="@font/font_kabouter"
            android:textColor="@color/colorTextOnLight" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginRight="65dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="60dp"
            android:text="@string/sign_up"
            android:theme="@style/DarkButton"
            android:background="@color/colorButtonBackgroundDark"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>