<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:theme="@style/LargeTextOnLight"/>

        <TextView
            android:id="@+id/quiz_info_title"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="28sp"
            android:textColor="@color/colorTextOnLight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:theme="@style/LargeTextOnLight"/>

        <TextView
            android:id="@+id/quiz_info_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="28sp"
            android:textColor="@color/colorTextOnLight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:theme="@style/LargeTextOnLight"/>

        <TextView
            android:id="@+id/quiz_info_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="28sp"
            android:textColor="@color/colorTextOnLight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/number_of_questions"
            android:layout_gravity="center_horizontal"
            android:theme="@style/LargeTextOnLight"/>

        <TextView
            android:id="@+id/quiz_info_nb_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="28sp"
            android:textColor="@color/colorTextOnLight"/>

        <Button
            android:id="@+id/quiz_info_btn_play"
            android:layout_width="125dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/play"
            android:theme="@style/DarkButton"
            android:background="@color/colorButtonBackgroundDark"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>

</FrameLayout>