<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddQuestionDialogFragment">

    <ImageButton
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_delete_forever_54"
        android:layout_gravity="right|top"
        android:background="@drawable/transparent_background" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:theme="@style/VeryVeryLargeTextOnLight"
        android:text="@string/question"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:theme="@style/LargeTextOnLight"
        android:text="@string/title"/>

    <EditText
        android:id="@+id/question_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:maxWidth="300dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:maxLength="150"
        android:textSize="20sp"
        android:textColor="@color/colorTextOnLight"
        android:maxLines="1"
        android:inputType="text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:theme="@style/LargeTextOnLight"
            android:text="@string/answer_a_title"/>
        <RadioButton android:id="@+id/radio_answer_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <EditText
        android:id="@+id/answer_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:maxWidth="300dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:maxLength="150"
        android:textSize="20sp"
        android:textColor="@color/colorTextOnLight"
        android:maxLines="1"
        android:inputType="text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:theme="@style/LargeTextOnLight"
            android:text="@string/answer_b_title"/>
        <RadioButton android:id="@+id/radio_answer_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <EditText
        android:id="@+id/answer_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:maxWidth="300dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:maxLength="150"
        android:textSize="20sp"
        android:textColor="@color/colorTextOnLight"
        android:maxLines="1"
        android:inputType="text"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/save"
        android:theme="@style/DarkButton"
        android:background="@color/colorButtonBackgroundDark"/>

    </LinearLayout>

</FrameLayout>