<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.WelcomeActivity"
    android:background="@color/colorBackground"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/app_title"
                android:textSize="56sp"
                android:textColor="@color/colorTextOnDark"
                android:fontFamily="@font/font_kabouter"
                android:layout_marginTop="100dp"
                android:layout_gravity="center_horizontal"
                />

            <Button
                android:id="@+id/btn_welcome_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text= "@string/sign_in"
                android:theme="@style/DarkButton"
                android:background="@color/colorButtonBackgroundDark"
                android:layout_marginTop="160dp"
                android:layout_marginRight="70dp"
                android:layout_marginLeft="70dp"
                />

            <Button
                android:id="@+id/btn_play_offline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text= "@string/play_offline"
                android:theme="@style/DarkButton"
                android:background="@color/colorButtonBackgroundDark"
                android:layout_marginTop="50dp"
                android:layout_marginRight="70dp"
                android:layout_marginLeft="70dp"
                android:layout_marginBottom="50dp"
                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
