<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LeaderboardActivity"
    android:background="@color/colorBackground">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/leaderboard_main_layout"
                android:layout_width="300dp"
                android:layout_height="600dp"
                android:background="@color/colorSecondBackground"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/leaderboard_trophy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/leaderboard_title"
                    android:src="@drawable/trophy_128"/>

                <TextView
                    android:id="@+id/leaderboard_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/leaderboard_trophy"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/leaderboard_season"
                    android:text="@string/leader_board"
                    android:theme="@style/VeryLargeTextOnLight"/>

                <LinearLayout
                    android:id="@+id/leaderboard_season"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/leaderboard_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/leaderboard_recycler_view_rankings"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/season"
                        android:theme="@style/MediumTextOnLight"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="2023"
                        android:theme="@style/MediumTextOnLight"/>

                </LinearLayout>


               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/leaderboard_recycler_view_rankings"
                   android:layout_width="match_parent"
                   android:layout_height="200dp"
                   android:background="@color/colorThirdBackground"
                   app:layout_constraintTop_toBottomOf="@id/leaderboard_season"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintBottom_toTopOf="@id/leaderboard_your_rank"/>


                <TextView
                    android:id="@+id/leaderboard_your_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_rank"
                    android:theme="@style/MediumTextOnLight"
                    app:layout_constraintTop_toBottomOf="@id/leaderboard_recycler_view_rankings"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/leaderboard_user_rank"/>

               <androidx.fragment.app.FragmentContainerView
                   android:id="@+id/leaderboard_user_rank"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:layout_constraintTop_toBottomOf="@id/leaderboard_your_rank"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"
                   android:layout_marginBottom="20dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>